wp-content/plugins/raffle-leader/assets/css/preview_default_style.css
@import url('https://fonts.googleapis.com/css2?family=Inter&display=swap');
@import url('https://fonts.googleapis.com/css2?family=Overpass&display=swap');

.raffleleader-preview-wrapper{
    width: 175vw;
    height: 300vh;
    position: fixed;
    z-index: 1;
    background-color: rgb(233, 233, 233);
    flex: 0 1 auto;
    font-family: 'Overpass';
    overflow: hidden;
}

.raffleleader-preview-reset * {
    margin: 0;
    padding: 0;
    border: 0;
    font-size: 100%;
    font: inherit;
    vertical-align: baseline;
    box-sizing: border-box; /* Ensures padding and border are included in the element's size */
}

.raffleleader-preview-box{
    display: flex;
    flex-wrap: wrap;
    position: absolute;
    top: 25%;
    left: 33%;
    min-height: 200px;
    min-width: 500px;
    max-width: 2000px;
    background-color: white;
    outline: 1px solid black;
    border-radius: 10px;
    overflow: hidden;
    font-family: 'Overpass';
}

.raffleleader-preview-box p.raffleleader-section-p {
    color: gray;
    font-size: 1.3vh;
    font-family: 'Overpass';
    font-style: normal;
    text-transform: none;
}

.raffleleader-preview-box h2.raffleleader-section-header {
    color: black;
    font-size: 2vh;
    font-weight: bold;
    font-family: 'Overpass';
    font-style: normal;
    text-transform: none;
}

.raffleleader-dropzone{
    display: flex;
    /* flex-direction: column; */
    border-top-left-radius: 10px;
    border-top-right-radius: 10px;
    flex-wrap: wrap;
    height: 600px;
    max-height: 1200px;
    min-height: 100px;
    width: 100%;
    background-color: white;
    overflow: visible;
}

.raffleleader-section{
    display: flex;
    flex-direction: column;
    position: relative;
    height: 100px;
    width: 150px;
    max-height: 100%;
    max-width: 100%;
    overflow: visible;
}

.raffleleader-layer-handle-container {
    position: absolute;
    bottom: -20px; /* Adjust this value to move the buttons up */
    left: 50%;
    transform: translateX(-50%);
    display: flex;
    overflow: visible;
    z-index: 10000000 !important;
}

.raffleleader-to-top-handle,
.raffleleader-to-back-handle {
    width: 30px;
    height: 20px;
    background-color: #8d8bfe; /* Light blue */
    cursor: pointer;
    display: flex;
    justify-content: center;
    align-items: center;
    transition: background-color 0.3s ease;
}

.raffleleader-to-top-handle {
    border-radius: 0 0 0 10px;
}

.raffleleader-to-back-handle {
    border-radius: 0 0 10px 0;
}

.raffleleader-to-top-handle:hover,
.raffleleader-to-back-handle:hover {
    background-color: #7063ff;
}

.raffleleader-to-top-handle::before,
.raffleleader-to-back-handle::before {
    content: '';
    width: 20px;
    height: 20px;
    background-size: contain;
    background-repeat: no-repeat;
    background-position: center;
}

.raffleleader-to-top-handle::before {
    background-image: url('../images/to-front.svg');
}

.raffleleader-to-back-handle::before {
    background-image: url('../images/to-back.svg');
}

.raffleleader-resize-handle{
    width: 1.2vh;
    height: 1.2vh;
    background-color:white;
    box-sizing: border-box;
    border: 3px solid #1601fe60;
    position: absolute;
}

.raffleleader-resize-bottom-left{
    bottom: -1px;
    left: -1px;
    cursor: nesw-resize;
}

.raffleleader-resize-bottom-right{
    bottom: -1px;
    right: -1px;
    cursor: nwse-resize;
}

.raffleleader-resize-top-left{
    top: -1px;
    left: -1px;
    cursor: nwse-resize;
}

.raffleleader-resize-top-right{
    top: -1px;
    right: -1px;
    cursor: nesw-resize;
}

.raffleleader-footer-wrapper{
    background-color: rgb(255, 255, 255);
    height: 50px;
    width: 100%;
    border-top: 1px solid black;
    overflow: none;
}

.raffleleader-footer{
    display: flex;
    flex-direction: row;
    margin-top: 17px;
    justify-content: center;
    align-items: center;
    width: 100%;
}

.raffleleader-footer-content{
    color:black;
    text-decoration: none;
    font-weight: normal;
    font-size: 13px;
    line-height: 2vh;
    margin-right: 10px;
    margin-left: 12px;
}

.raffleleader-footer-content:hover{
    color: black;
    cursor: pointer;
}

.raffleleader-footer-logo{
    margin-left: 2px;
    margin-right: 2px;
}

.raffleleader-footer-text-logo{
    /* vertical-align: middle; */
    margin-left: 5px;
    margin-right: 5px;
    height: 9px;
}

.rl_link{
    margin-left: 10px;
}

.rl_link:hover{
    color: #1501FE;
}

.selected-raffleleader-section{
    outline: 2px dashed #1601feba;
    outline-offset: -3px;
}

.raffleleader-text-section{
    display: flex;
    flex-wrap: wrap;
    justify-content: center;
    align-items: center;
    box-sizing: border-box;
    width: 100%;
    height: 100%;
    background-color: rgb(255, 255, 255);
    /* border: 1px solid black; */
}

.raffleleader-text-section > h2.raffleleader-section-header {
    color: black;
    font-size: 30px;
    padding: 1vh 1vh 1vh 1vh;
    margin: 0;
    font-weight: bold;
    letter-spacing: 1px;
    line-height: 3vh;
}

.raffleleader-text-section > h2.raffleleader-section-header:hover{
    cursor: default;
}

.raffleleader-counter-section{
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    box-sizing: border-box;
    width: 100%;
    height: 100%;
    background-color: rgb(255, 255, 255);
    /* border: 1px solid black; */
}

.raffleleader-counter-section > h2.raffleleader-section-header{
    margin: 0;
    font-size: 60px;
    letter-spacing: 1px;
    line-height: 18px;
    position: absolute;
}

.raffleleader-counter-section > p.raffleleader-section-p{
    font-size: 1.5vh;
    color: black;
    position: absolute;
}

.raffleleader-counter-section > h2.raffleleader-section-header:hover,
.raffleleader-counter-section > p.raffleleader-section-p:hover{
    cursor: default;
}

.raffleleader-image-section{
    display: flex;
    justify-content: center;
    align-items: center;
    box-sizing: border-box;
    height: 100%;
    width: 100%;
    /* border: 1px solid black; */
    background-color: rgb(255, 255, 255);
}

.raffleleader-image-section > p.raffleleader-section-p{
    font-size: 2.5vh;
    color: darkgray;
    font-weight: bold;
}

.raffleleader-image-section > p.raffleleader-section-p:hover{
    cursor: default;
}

.raffleleader-image-section > img{
    height: 100%;
    width: 100%;
    object-fit: cover;
}

.raffleleader-entry-section{
    display: flex;
    flex-wrap: wrap;
    box-sizing: border-box;
    width: 100%;
    height: 100%;
    background-color: rgb(255, 255, 255);
}

.raffleleader-entry-handle-form{
    width: 100%;
}

.raffleleader-entry-section > form{
    position: relative;
    display: flex;
    justify-content: center;
    align-items: center;
    width: 100%;
    height: 100%;
}

.raffleleader-entry-section input[type="email"]{
    position: absolute;
    background-color: rgb(255, 255, 255);
    width: 85%;
    height: 60%;
    border: 1px solid gray;
    border-radius: 10px;
    padding-left: 2vh;
}

.raffleleader-entry-section input[type="email"]:hover{
    cursor: horizontal-text;
}

.raffleleader-entry-section input[type="email"]:active{
    border-color: gray;
}

.raffleleader-entry-section input[type="email"]::placeholder{
    color: inherit;
    font-weight: 500;
}

.raffleleader-entry-section button[type="submit"]{
    transition: width 0.7s ease-in-out, height 0.8s ease-in-out;
    position: absolute;
    height: 62%;
    width: 12%;
    border-radius: 10px;
    border: none;
    background-color: #1501FE;
    color: white;
    font-size: 2.5vh;
    z-index: 10;
    right: 7.5%;
}

.raffleleader-entry-section button[type="submit"]:hover{
    background-color:#1200dd; 
    color: rgb(226, 226, 226);
    cursor: pointer;
}

.raffleleader-entry-section button[type="submit"]:active{
    background-color: #1501FE;
    color: white;
    cursor: pointer;
}

.raffleleader-additional-entry-section{
    transition: filter 1s ease, opacity 1s ease;
    opacity: 1;
    filter: greyscale(0%);
    display: flex;
    align-items: center;
    justify-content: space-between;
    background-color: rgb(255, 255, 255);
    padding: 0 2.5vw 0 2.5vw;
    flex-wrap: wrap;
    box-sizing: border-box;
    width: 100%;
    height: 100%;
    /* border: 1px solid black; */
}

.raffleleader-additional-entry-text-column{
    transition: width 0.7s ease-in-out, height 0.8s ease-in-out;
    position: absolute;
    left: 8%;
}

.raffleleader-additional-entry-form-column{
    transition: width 0.7s ease-in-out, height 0.8s ease-in-out;
    display: flex;
    width: 84%;
    position: absolute;
    left: 8%;
}

.raffleleader-additional-entry-text-column > h2.raffleleader-section-header{
    transition: width 0.7s ease-in-out, height 0.8s ease-in-out;
    font-size: 20px;
    padding: 0;
    margin: 0.5vh 0 0 0;
    line-height: 2vh;
}

.raffleleader-additional-entry-text-column > p.raffleleader-section-p {
    transition: width 0.7s ease-in-out, height 0.8s ease-in-out;
    font-size: 12px;
    padding: 0;
    margin: 0.3vh 0 0 0;
    line-height: 2vh;
    font-weight: normal;
}


.raffleleader-additional-entry-button-column{
    transition: width 0.7s ease-in-out !important;
    position: absolute;
    right: 8%;
    display: flex;
    justify-content: center;
    width: 10%;
    height: 44px;
}

.raffleleader-additional-entry-button-column-refer{
    transition: width 0.7s ease-in-out !important;
    position: absolute;
    right: 8%;
    display: flex;
    justify-content: center;
    width: 25%;
}

.raffleleader-additional-entry-button-column > button{
    transition: width 0.7s ease-in-out !important;
    display: flex;
    justify-content: center;
    align-items: center;
    color: white;
    background-color: #1501FE;
    border: none;
    border-radius: 10px;
    padding: 10px 25px 10px 25px;
    font-size: 1.6vh;
    width: 100%;
    z-index: 100000;
}

.raffleleader-additional-entry-button-column > button:hover{
    background-color: #1200dd;
    cursor: pointer;
}

.raffleleader-additional-entry-button-column > button:active{
    background-color: #1501FE;
    cursor: default;
}

.dragging{
    opacity: 1;
}

